packages/typ/tests/fixtures/diagnostics/0860_polyvar_tuple_payload_mismatch_10.ml.expected
File "0860_polyvar_tuple_payload_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0860_polyvar_tuple_payload_mismatch_10 is not a valid module name.

File "0860_polyvar_tuple_payload_mismatch_10.ml", line 1, characters 35-39:
1 | let _ : [ `P of int * bool ] = `P (true, 9)
                                       ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
